Fixed the spacing of p-info

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 
 .product {
     display: grid;
-    grid-template-columns: 35% 65%;
+    grid-template-columns: 20% 80%;
     padding-bottom: 20px;
 }
 
